--- a/css/style.css
+++ b/css/style.css
@@ -688,21 +688,11 @@ body {
 }
 
 .social-link {
-  position: relative;
-  display: block;
-  background-repeat: no-repeat;
-  background-position: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   min-width: 47px;
   min-height: 40px;
-}
-
-.social-svg {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  margin: auto;
 }
 
 .social-link:hover .social-svg path,
@@ -720,15 +710,17 @@ body {
 }
 
 .phone-link {
-  display: block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   font-weight: 400;
   font-size: 40px;
   line-height: 40px;
-  text-align: center;
   text-decoration: none;
   color: #000;
   margin: 0;
   padding: 0;
+  margin-inline: 1px;
 }
 
 .phone-link:hover,
