--- a/css/style.css
+++ b/css/style.css
@@ -1043,7 +1043,7 @@ body {
   display: flex;
   gap: 2px;
   position: relative;
-  margin-bottom: 46px;
+  margin-bottom: 44px;
 }
 
 .range-scale {
@@ -1070,12 +1070,12 @@ body {
 
 .toggle-min {
   top: -8px;
-  left: 0;
+  left: 1px;
 }
 
 .toggle-max {
   top: -8px;
-  left: 206px;
+  left: 208px;
 }
 
 .range-toggle:active {
@@ -1195,7 +1195,7 @@ body {
   position: relative; /* не понял, зачем... */
   display: flex;
   align-items: center;
-  width: 290px;
+  width: 294px;
   margin-right: auto;
 }
 
@@ -1207,8 +1207,8 @@ body {
   line-height: 21px;
   border: 2px solid #e5e5e5;
   border-radius: 4px;
-  padding: 11px 131px 11px 20px;
-  padding-right: 50px;
+  padding: 12px 131px 12px 20px;
+  padding-right: 48px;
   box-sizing: border-box;
   appearance: none;
   background-image: url("../images/select-arrow.svg");
@@ -1479,9 +1479,9 @@ body {
 }
 
 /* Класс для скрытия окна поиска гостиницы */
-/* .modal-container-close{
+.modal-container-close {
   display: none;
-} */
+}
 
 .modal {
   position: relative;
@@ -1494,6 +1494,7 @@ body {
 
 .modal-search {
   width: 717px;
+  box-sizing: border-box;
 }
 
 .modal-close-button {
@@ -1506,19 +1507,51 @@ body {
   border-radius: 50%;
   border: none;
   padding: 0;
-  background-image: url("../images/modal/modal-close-button.svg");
-  background-repeat: no-repeat;
-  background-position: center;
   cursor: pointer;
 }
 
+.modal-close-button::before {
+  position: absolute;
+  content: "";
+  width: 14px;
+  height: 2px;
+  background-color: #000000;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-6px) rotate(45deg);
+}
+
+.modal-close-button::after {
+  position: absolute;
+  content: "";
+  width: 2px;
+  height: 14px;
+  background-color: #000000;
+  top: 50%;
+  left: 50%;
+  transform: translateY(-6px) rotate(45deg);
+}
+
+.modal-close-button:hover {
+  background-color: #e6e6e6;
+}
+
+.modal-close-button:active::before,
+.modal-close-button:active::after {
+  background-color: rgba(117, 97, 87, 0.3);
+}
+
 .modal-title {
+  margin: 0;
+  padding: 0;
+  margin-bottom: 64px;
   font-family: "PT Sans", sans-serif;
   font-weight: 700;
   font-size: 30px;
   line-height: 36px;
   color: #000000;
   text-transform: uppercase;
+  max-width: 650px;
 }
 
 .modal-label {
@@ -1530,27 +1563,96 @@ body {
   text-transform: capitalize;
 }
 
-.modal-close-button:hover {
-  background-color: #e6e6e6;
-}
-
-.modal-close-button:active {
-  background-color: #e6e6e6;
-}
-
 .modal-form {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  gap: 24px 23px;
+  grid-template-columns: 119px 1fr;
+  column-gap: 18px;
   align-items: center;
 }
 
-.input-date-wrap {
+.input-date-label {
+  position: relative;
   grid-column: 2 / -1;
+  border-radius: 4px;
+  background-color: #f2f2f2;
+  box-sizing: border-box;
+  width: 440px;
+  height: 48px;
+  margin-bottom: 4px;
+}
+
+.input-age-label {
+  display: flex;
+  border-radius: 4px;
+  background-color: #f2f2f2;
+  box-sizing: border-box;
+  height: 48px;
+  width: 110px;
+}
+
+.input-age-label:hover,
+.input-age-label:hover .modal-input-age {
+  background-color: #e6e6e6;
+}
+
+.button-calendar {
+  position: absolute;
+  width: 16px;
+  height: 15px;
+  background-image: url("../images/modal/modal-calendar.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  opacity: 0.3;
+  border: none;
+  padding: 0;
+  top: 16px;
+  right: 22px;
+  cursor: pointer;
+}
+
+.modal-input {
+  width: 100%;
+  height: 100%;
+  border: none;
+  background-color: #f2f2f2;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+.modal-input-date {
+  padding: 12px 20px 12px 18px;
+  font-family: inherit;
+  font-weight: inherit;
+  font-size: inherit;
+  line-height: 24px;
+}
+
+.modal-input-date:hover {
+  background-color: #e6e6e6;
+}
+
+.modal-input-date:focus-visible {
+  background-color: #e6e6e6;
+}
+
+.modal-input-date::placeholder {
+  color: rgba(0, 0, 0, 0.6);
 }
 
 .modal-input-age {
-  width: 110px;
+  padding: 14px 5px;
+  width: 31px;
+  text-align: center;
+  font-family: inherit;
+  font-weight: inherit;
+  font-size: inherit;
+  line-height: 24px;
+}
+
+.modal-input-age::-webkit-outer-spin-button,
+.modal-input-age::-webkit-inner-spin-button {
+  appearance: none;
+  margin: 0;
 }
 
 .input-age-wrap {
@@ -1566,8 +1668,8 @@ body {
   font-size: 20px;
   line-height: 24px;
   background-color: #83b3d3;
-  margin-top: 25px;
-  padding: 18px 256px;
+  margin-top: 48px;
+  padding: 18px 20px;
   border: none;
   border-radius: 10px;
   color: #ffffff;
@@ -1575,8 +1677,27 @@ body {
   cursor: pointer;
 }
 
+.button-modal:hover {
+  background-color: #68a2ca;
+}
+
+.button-modal:focus-visible {
+  background-color: #68a2ca;
+}
+
+.button-modal:active {
+  background-color: #68a2ca;
+  color: rgba(255, 255, 255, 0.3);
+}
+
 .modal-children-tooltip {
   position: relative;
+}
+
+.modal-tooltip-wrap {
+  display: flex;
+  align-items: center;
+  gap: 10px;
 }
 
 .tooltip-toggle {
@@ -1613,16 +1734,17 @@ body {
   position: absolute;
   display: block;
   width: 256px;
-  top: 40px;
-  left: -142px;
+  top: 44px;
+  left: -115px;
   background-color: #333333;
   color: #ffffff;
-  padding: 15px 18px 18px 22px;
+  box-sizing: border-box;
   border-radius: 10px;
   font-family: inherit;
   font-weight: 400;
   font-size: 16px;
   line-height: 20px;
+  padding: 20px 18px 23px 22px;
 }
 
 /* Класс для скрытия подсказки в модальном  окне */
@@ -1638,13 +1760,21 @@ body {
   left: 50%;
   top: -7px;
   background-color: #333333;
-  transform: rotate(45deg);
+  transform: translateX(-7px) rotate(45deg);
 }
 
 .input-tooltip {
+  display: block;
   grid-column: 2 / -1;
   font-weight: 400;
   font-size: 16px;
+  margin-left: 20px;
+  margin-bottom: 23px;
+}
+
+.input-tooltip-hide {
+  /* Класс для скрытия тултипа для инпутов с датами в модальном окне */
+  visibility: hidden;
 }
 
 .input-tooltip-error {
@@ -1655,22 +1785,71 @@ body {
   color: #333333;
 }
 
-.input-date-wrap {
-  width: 440px;
+.button-wrap {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 48px;
 }
 
-.custom-calendar {
-  display: block;
-  width: 16px;
-  height: 15px;
-  background-color: #ffffff;
-  background-image: url("../images/modal/modal-calendar.svg");
-  background-size: 16px 15px;
-  background-repeat: no-repeat;
-  /* background-position: right 22px center; */
+.button-modal-input {
+  position: relative;
+  width: 20px;
+  height: 20px;
+  background-color: inherit;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  padding: 0;
 }
 
-.modal-input-date {
-  width: 440px;
-  padding: 12px 20px;
+.button-modal-minus::before,
+.button-modal-plus::before {
+  position: absolute;
+  content: "";
+  background-color: rgba(117, 97, 87, 0.3);
+  width: 14px;
+  height: 2px;
+  top: 9px;
+  left: 3px;
+}
+
+.button-modal-plus::after {
+  position: absolute;
+  content: "";
+  background-color: rgba(117, 97, 87, 0.3);
+  width: 2px;
+  height: 14px;
+  top: 3px;
+  left: 9px;
+}
+
+.button-modal-minus:hover::before {
+  background-color: #000000;
+}
+
+.button-modal-plus:hover::before,
+.button-modal-plus:hover::after {
+  background-color: #000000;
+}
+
+.button-modal-minus:active::before {
+  background-color: rgba(117, 97, 87, 0.3);
+}
+
+.button-modal-plus:active::before,
+.button-modal-plus:active::after {
+  background-color: rgba(117, 97, 87, 0.3);
+}
+
+.modal-wrap-age {
+  display: flex;
+  gap: 46px;
+  justify-content: space-between;
+}
+.children-wrap {
+  display: flex;
+  justify-content: space-between;
+  gap: 46px;
 }
